Completed initial versiojn of places API